# nba-bets

./: .gitignore  .pre-commit-config.yaml  Makefile  PRE_COMMIT.md  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml  integration-tests.yml  pr-checks.yml  release.yml  security.yml
backend/: .env.template  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 013bb0e20ef8_unify_player_and_team_bets_into_single_.py  20250108_rename_prop_description_to_description.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py
backend/app/database/: __init__.py  connection.py
backend/app/models/: __init__.py  bet.py
backend/app/routers/: __init__.py  bets.py
backend/scripts/: __init__.py  seed_data.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_description_recalculation.py  test_main.py  test_models.py  test_unified_api.py
docs/: CODEOWNERS  WARP.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  setupTests.ts
frontend/src/components/: BetModal.test.tsx  BetModal.tsx  DeleteConfirmationModal.tsx  Layout.test.tsx  Layout.tsx
frontend/src/integration/: bet-workflow.integration.test.tsx
frontend/src/lib/: api.test.ts  api.ts
frontend/src/pages/: AddBet.test.tsx  AddBet.tsx  Dashboard.test.tsx  Dashboard.tsx  PlayerBets.tsx  PropBets.test.tsx  PropBets.tsx  TeamBets.tsx
scripts/: init-db.sql
